--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dynamic Binary Text Background</title>
+    <title>Login</title>
     <style>
         /* CSS styles for the binary text and main content */
         body {
